--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <build_depend>roseus</build_depend>
   <build_depend>std_msgs</build_depend>
 
+  <run_depend>fetch_gazebo</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>rosserial_python</run_depend>
   <run_depend>std_msgs</run_depend>
